Kubernetes/Lab 31 - Network Configuration/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-website-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-website
  template:
    metadata:
      labels:
        app: static-website
    spec:
      containers:
      - name: static-website
        image: maryamabualmagd/static-website:latest
        ports:
        - containerPort: 80
