Kubernetes/Lab 31 - Network Configuration/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
spec:
  podSelector:
    matchLabels:
      app: static-website
  ingress:
  - from:
    - podSelector: {}
  policyTypes:
  - Ingress
